--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "06-social-network-server",
+  "name": "nature-websites-server",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
