--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "02-social-network-client",
+  "name": "nature-websites-client",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
