--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,7 +8,6 @@ services:
       - 27017:27017
     volumes:
       - ./database/init-mongo.js:/docker-entrypoint-initdb.d/init-mongo.js:ro
-      - mongodb_data:/data/db
     environment:
       - MONGO_INITDB_DATABASE=natureWebsites
 
@@ -27,6 +26,5 @@ services:
     ports:
       - 4200:80
     build: ./frontend
-
-volumes:
-  mongodb_data:
+    depends_on:
+      - backend
